some improvements and reformatting code